--- a/css/pricing.css
+++ b/css/pricing.css
@@ -172,9 +172,9 @@ nav .btn:hover{
   position: absolute;
   width: 100%;
   height: 0%;
-  border-radius: 100%;
+  border-radius: 30%;
   background: rgba(255, 255, 255, 0.055);
-  top: -100px;
+  bottom: -100px;
   left: 0;
   transition-duration: 1s;
 }
@@ -182,7 +182,7 @@ nav .btn:hover{
   color: white ;
 }
 #plans .col-lg-4:hover p{
-  color: white ;
+  color: #FCD980 ;
 }
 #plans .col-lg-4:hover .p{
   color: white ;
@@ -197,7 +197,7 @@ nav .btn:hover{
 
 #plans .col-lg-4:hover:before{
   left: 0;
-  top: -300px;
+  bottom: -500px;
   height: 100%;
 }
 #plans .col-lg-4:hover button{
