--- a/css/read-blog.css
+++ b/css/read-blog.css
@@ -9,9 +9,6 @@ body{
 html, body {
   overflow-x: hidden;
 }
-ul li{
-  list-style-type: none;
-}
 a{
   color: black;
   text-decoration: none;
@@ -45,6 +42,68 @@ nav .btn:hover{
   color: #282938;
   background: #FCD980;
   border: 2px solid #FCD980;
+}
+
+#title{
+  padding-top: 128px;
+  padding-bottom: 80px;
+}
+
+#title h1{
+  color: #282938;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 64px;
+  width: 949px;
+  margin: 0 auto;
+  margin-bottom: 16px;
+}
+#title p{
+  color: #282938;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 48px;
+  opacity: 87%;
+}
+#description{
+  padding-bottom: 96px;
+}
+#description h2{
+  font-size: 38px;
+  color: #282938;
+  font-weight: 600;
+  line-height: 56px;
+  margin-bottom: 32px;
+}
+#description .h2{
+  font-size: 38px;
+  color: #282938;
+  font-weight: 600;
+  line-height: 56px;
+  margin-top: 56px;
+  margin-bottom: 32px;
+}
+#description p{
+  font-size: 16px;
+  color: #282938;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 40px;
+  opacity: 70%;
+}
+#description .p{
+  font-size: 16px;
+  color: #282938;
+  font-weight: 400;
+  line-height: 28px;
+  margin:0 0;
+  opacity: 70%;
+}
+#description ul{
+  margin: 24px 0;
+  color: #282938;
+  opacity: 70%;
 }
 
 #footer{
