--- a/css/read-case-studies.css
+++ b/css/read-case-studies.css
@@ -9,9 +9,7 @@ body{
 html, body {
   overflow-x: hidden;
 }
-ul li{
-  list-style-type: none;
-}
+
 a{
   color: black;
   text-decoration: none;
@@ -60,39 +58,64 @@ nav .btn:hover a{
 }
 
 
-#title{
+#details{
   padding-top: 128px;
   padding-bottom: 80px;
 }
 
-#title h1{
+#details h1{
   color: #282938;
   font-weight: 600;
   font-size: 48px;
   line-height: 64px;
-  width: 949px;
-  margin: 0 auto;
+  width: 664px;
+  margin-top: 12px;
   margin-bottom: 16px;
 }
-#title p{
+#details h4{
+  color: #282938;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+opacity: 80%;
+}
+#details .p{
   color: #282938;
   font-weight: 500;
   font-size: 16px;
   line-height: 28px;
   margin-bottom: 48px;
-  opacity: 87%;
+  opacity: 70%;
 }
-#description{
+#details .col-lg-2,.col-lg-3 p{
+  color: #282938;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  margin-bottom: 4px;
+  opacity: 80%;
+}
+#details img{
+  margin-bottom: 48px;
+}
+#details .col-lg-2,.col-lg-3  h5{
+  color: #282938;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  margin-bottom: 32px;
+}
+#about{
   padding-bottom: 96px;
 }
-#description h2{
+#about h2{
   font-size: 38px;
   color: #282938;
   font-weight: 600;
   line-height: 56px;
   margin-bottom: 32px;
 }
-#description .h2{
+#about .h2{
   font-size: 38px;
   color: #282938;
   font-weight: 600;
@@ -100,7 +123,7 @@ nav .btn:hover a{
   margin-top: 56px;
   margin-bottom: 32px;
 }
-#description p{
+#about p{
   font-size: 16px;
   color: #282938;
   font-weight: 400;
@@ -108,7 +131,7 @@ nav .btn:hover a{
   margin-bottom: 40px;
   opacity: 70%;
 }
-#description .p{
+#about .p{
   font-size: 16px;
   color: #282938;
   font-weight: 400;
@@ -116,7 +139,7 @@ nav .btn:hover a{
   margin:0 0;
   opacity: 70%;
 }
-#description ul{
+#about ul{
   margin: 24px 0;
   color: #282938;
   opacity: 70%;
