--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -56,6 +56,68 @@ nav .btn:hover{
   margin-top: 24px;
 }
 
+#form{
+  padding: 128px 0;
+}
+#form h1{
+  color: #282938;
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 64px;
+}
+#form .p{
+  color: #282938;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  opacity: 70%;
+  width: 562px;
+  margin: 0 auto;
+  margin-top: 16px;
+  margin-bottom: 64px;
+}
+
+#form .form{
+  background: #F4F6FC;
+  padding: 55px 77px;
+  padding-bottom: 69px;
+  border-radius: 12px;
+}
+#form label{
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 32px;
+  color: #000;
+  margin-bottom: 6px;
+}
+#form input{
+  padding: 16px 32px;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.123);
+  margin-bottom: 24px;
+}
+#form .message{
+  padding: 18px 32px;
+  padding-bottom: 92px;
+  margin-bottom: 32px;
+}
+#form button{
+  padding: 16px 64px;
+  width: 254px;
+  border-radius: 41px;
+  border: 1px solid #282938;
+  background: #282938;
+  color: #F4F6FC;
+}
+#form button:hover{
+  padding: 16px 64px;
+  width: 254px;
+  border-radius: 41px;
+  border: 1px solid #282938;
+  background: transparent;
+  color: #282938;
+}
+
 
 #footer .contact{
   background: #FCD980;
